<resources>
    <string name="font_verizon_apex_medium_otf">VerizonApex-Medium.otf</string>
    <string name="font_VeraMono_ttf">VeraMono.ttf</string>
    <string name="phonetype">Which phone is this?</string>
    <string name="receive">Receiving&#8230;</string>
    <string name="sending">Sending&#8230;</string>
    <string name="transfer_interrupted">Transfer Interrupted</string>
    <string name="new_phone_name">New phone name</string>
    <string name="total_connected_devices">Total Connected:&#160;</string>
    <string name="enter_pin">Enter pairing pin</string>
    <string name="content_transfer">Content Transfer</string>
    <string name="discovering">Discovering&#8230;</string>
    <string name="or">OR</string>
    <string name="choose">Choose From Phone List</string>
    <string name="securitytxt_pre">Security Key </string>
    <string name="securitytxt_post"> is sent to Receiver</string>
    <string name="securitykey">12345</string>
    <string name="msg_p2p_no_wifi_connection">Wi-Fi connection not found. Please connect to a Wi-Fi connection.</string>
    <string name="msg_connection_other_device">Connecting, please wait.</string>
    <string name="msg_connection_other_device_please_wait">Connecting to the other device. Please wait.</string>
    <string name="connecting_hostspot_please_wait">Connecting to hotspot. Please wait.</string>
    <string name="connecting_wifi_please_wait">Connecting to Wi-Fi. Please wait.</string>
    <string name="getting_ready_please_wait">Getting ready, please wait.</string>
    <string name="conntectionfailed">Please check the pin, verify both phones are still connected to same network and retry.</string>
    <string name="refresh_discovery">Refresh</string>
    <string name="ortext">OR</string>
    <string name="data_transfer_cancelled">Data transfer was cancelled, please try again.</string>
    <string name="phone_name">Phone name</string>
    <string name="wifi_setup">Wi-Fi Setup</string>
    <string name="same_wifi">Connect both phones to same Wi-Fi</string>
    <string name="wifi_not_connected">Not connected</string>
    <string name="calc_message">Please wait, collecting data</string>
    <string name="selectoneormore">Please select at least one item to Transfer.</string>
    <string name="file_with_zero_count_msg">Data with zero count cannot be transferred. Please deselect it.</string>
    <string name="personal_hotspot_on_msg">Mobile hotspot is on.\nPlease turn it off to continue.</string>
    <string name="supporting_video_file_formats">Transfer of *.mov file format(s) is not supported.</string>
    <string name="zero_lenth_files">**Media files with Zero content will not be transferred.</string>
    <string name="invalid_device_combo_selection">Device combination selection is not in sync. Please start over on both devices and verify the combinations.</string>
    <string name="msg_ok">OK</string>
    <string name="TOTAL_TIME">Total time :&#160; </string>
    <string name="AVERAGE_SPEED">Average speed :&#160; </string>
    <string name="PROCESSING_PHOTO">Collecting Photos &#160; </string>
    <string name="PROCESSING_MUSIC">Collecting Music &#160; </string>
    <string name="PROCESSING_VIDEO">Collecting Videos &#160; </string>
    <string name="PROCESSING_CONTACTS">Collecting Contacts &#160; </string>
    <string name="PROCESSING_CALLLOG">Collecting Call logs &#160; </string>
    <string name="PROCESSING_APPS">Collecting Apps &#160; </string>
    <string name="PROCESSING_SMS_MMS">Collecting Messages &#160; </string>
    <string name="PROCESSING_CALENDAR">Collecting Calendars &#160; </string>
    <string name="PROCESSING_DOCUMENT">Collecting Documents &#160; </string>
    <string name="PROCESSING_PASSWORD">Collecting Password &#160; </string>
    <string name="PLEASE_WAIT">Please wait...</string>
    <string name="wifi_pair_message">Connect to network shown on other device</string>
    <string name="wifi_connected_to">Wi-Fi Connected to: &#160; </string>
    <string name="wifi_warning">It appears you have connected to the Verizon Guest Wi-Fi Network. For optimum performance, please select the MCT-Fast (preferred) or MCT Network.\n\n Password: vztransfer</string>
    <string name="not_same_wifi_network_warning">Please connect this device to network: &#160;</string>
    <string name="email_id">1234567890</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyright">&#9400;</string>
    <string name="copyright2">&#169;</string>
    <string name="eula_header">Terms and Conditions.</string>
    <string name="terms_message">By clicking \"Start transfer\" you are accepting the Terms and Conditions.</string>
    <string name="terms_conditions_str">Terms and Conditions.</string>
    <string name="transfer_summary_header">Transfer Summary</string>
	<string name="ct_crash_dialog_text">Sorry for inconvenience, we are working to make this app better.</string>
    <string name="ct_title_activity_error_report_dialog">ErrorReportDialog</string>
    <string name="password_paste_msg">Paste it into the Wi-Fi password field.</string>
    <string name="ct_no_internet_alert_msg">Your device requires your permission to stay connected to networks with no internet access.</string>
    <string name="ct_no_internet_alert_msg_show_notification">Click here to open the notification tray to look for the \"no internet\" message and select \"Yes\" on the prompt.</string>
    <string name="ct_click_here_spannable">Click here to open your&#160;</string>
    <string name="here_text">here</string>
    <string name="oldButtonName">Old</string>
    <string name="newButtonName">New</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="back">Back</string>
    <string name="eula">
        <![CDATA[
        EULA Text
        ]]>
    </string>
    <string name="about">About</string>
    <string name="build_version">Build Version:&#160;</string>
    <string name="build_date">Date:&#160;</string>
    <string name="enabling_wifi_please_wait">Enabling Wi-Fi, Please wait...</string>
    <string name="android">Android</string>
    <string name="iPhone">iPhone</string>
    <string name="btnContinue">Continue</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="btnTransfer">Transfer</string>
    <string name="contacts_str">Contacts</string>
    <string name="photos_str">Photos</string>
    <string name="videos_str">Videos</string>
    <string name="musics_str">Audio</string>
    <string name="callLogs_str">Call logs</string>
    <string name="messages_str">Messages</string>
    <string name="calendars_str">Calendars</string>
    <string name="documents_str">Documents</string>
    <string name="apps_str">Apps</string>
    <string name="passwords_str">Passwords</string>
    <string name="finish_summary_TotalTime">Total Time:&#160;</string>
    <string name="finish_summary_TotalTransferred">Total Transferred:&#160;</string>
    <string name="finish_summary_MB">&#160;MB</string>
    <string name="btnNo">No</string>
    <string name="btnYes">Yes</string>
    <string name="DataSent">Data Sent</string>
    <string name="DataReceived">Data Received</string>
    <string name="action_settings">action_settings</string>
    <string name="title_activity_ctstartup">CTStartupActivity</string>
    <string name="toolbar_heading_ctlanding">Phone-to-Phone Transfer</string>
    <string name="heading_ctlanding">Transfer what you need to your new phone.</string>
    <string name="text_ctlanding">Open My Verizon and make sure both phones are on this screen. Follow the instructions in sync, so each device is on the same step.</string>
    <string name="text_ctlanding_standalone">Open Content Transfer and make sure both phones are on this screen. Follow the instructions in sync, so each device is on the same step.</string>
    <string name="toolbar_heading_error">Error</string>
    <string name="toolbar_heading_transfer_summary_detail">Transfer Summary Details</string>
    <string name="toolbar_heading_transfer_summary">Transfer Summary</string>
    <string name="toolbar_heading_setup">Setup</string>
    <string name="toolbar_heading_pairing">Pairing</string>
    <string name="toolbar_heading_discovering">Discovering</string>
    <string name="toolbar_heading_transfer">Transfer</string>
    <string name="toolbar_saving_background_media">Saving</string>
    <string name="toolbar_heading_verizon_cloud">Verizon Cloud</string>
    <string name="toolbar_heading_transfer_complete">Transfer Complete</string>
    <string name="toolbar_heading_install">Install Apps</string>
    <string name="button_got_it_text">Got it</string>
    <string name="button_done_text">Done</string>
    <string name="button_try_again_text">Try Again</string>
    <string name="button_recap_text">Recap</string>
    <string name="button_next_text">Next</string>
    <string name="button_try_another_way_text">Try Another Way</string>
    <string name="button_wifi_settings_text">Wi-Fi settings</string>
    <string name="button_re_scan_text">Rescan</string>
    <string name="verizon_content_transfer_text">Verizon content transfer</string>
    <string name="title_activity_ctinvitation_to_connect">CTInvitationToConnectActivity</string>
    <string name="heading_ctinvitation_to_connect">Be on the lookout for an invite to start the transfer.</string>
    <string name="text_ctinvitation_to_connect">Check your new phone and connect.</string>
    <string name="title_activity_ctselect_content">CTSelectContentActivity</string>
    <string name="heading_ct_select_content">Getting ready to transfer.</string>
    <string name="text_ct_select_content">Keep the app open for a smooth transfer.</string>
    <string name="title_activity_ctcomplete">CTCompleteActivity</string>
    <string name="heading_ct_complete">Congrats. You\'re Done.</string>
    <string name="text_ct_complete">Your transfer is complete. Check your new phone to see how it went.</string>
    <string name="title_activity_ctcomplete_notification">CTCompleteNotificationActivity</string>
    <string name="title_activity_ctshow_pin">CTShowPINActivity</string>
    <string name="heading_ctshow_pin">Your code is ready.</string>
    <string name="title_activity_ctenter_pin">CTEnterPINActivity</string>
    <string name="heading_ctenter_pin">Enter your code.</string>
    <string name="text_ctenter_pin">Check your other phone and enter the code below.</string>
    <string name="unCheck">unCheck</string>
    <string name="heading_cttransfer_interrupt">Oops. Looks like your transfer was interrupted.</string>
    <string name="text_cttransfer_interrupt">Your transfer didn\'t finish. Review the transfer recap or try again.</string>
    <string name="ct_tr_summ_cell_content_tv">Contacts</string>
    <string name="ct_tr_summ_cell_total_count_tv">251 of 251</string>
    <string name="ct_select_cnt_transfer_heading_tv">What are you transferring?</string>
    <string name="ct_select_cnt_transfer_desc_tv">Choose all the things you want on your new phone.</string>
    <string name="ct_cloud_contact_can_not_transfer_tv">* Sign in to your Cloud account on the new device to access Cloud content.</string>
    <string name="ct_cnt_transfer_transfer_txt">Transfer</string>
    <string name="center_button">Center button</string>
    <string name="cancel_button">Cancel</string>
    <string name="dialog_title">Content Transfer</string>
    <string name="dialog_ok">OK</string>
    <string name="left_link">Left Link</string>
    <string name="restart">Restart</string>
    <string name="learn_more">Learn More</string>
    <string name="vz_cloud_banner_text">Your memories are always safe with Verizon Cloud. Keep your photos, videos, contacts and more protected from devices loss or damage when you back up to Cloud. Now get 500GB for only $5/month.</string>
    <string name="vz_cloud_protects">Verizon Cloud Protects</string>
</resources>