<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mvm="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="24dp"
    android:background="@color/vz_white_color">

    <TextView
        android:id="@+id/layout_dialog_tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/dialog_title"
        android:layout_marginBottom="15dp"
        android:textColor="@color/vz_black_color"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/layout_dialog_tvMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:textColor="@color/vz_gray_color"
        android:autoLink="all"
        android:scrollbars="horizontal"
        android:text="@string/ct_crash_dialog_text"/>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:padding="0.5dp"
        android:background='@color/vz_gray_color'
        >

        <TextView
            android:id="@+id/layout_dialog_tvLeftLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/vz_red_color"
            android:text="@string/left_link"
            android:gravity="center"
            android:textSize="15sp"
            android:layout_weight="1"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/layout_dialog_tvRightLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/vz_red_color"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/restart"
            android:layout_weight="1"
            android:visibility="visible"/>

    </LinearLayout>



</LinearLayout>