<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/ct_mf_white_color">

	<include
		android:id="@+id/ct_header_bar"
		layout="@layout/ct_br_toolbar"/>


	<TextView
		android:id="@+id/ct_error_heading_tv"
		style="@style/CTTextHeading"
		android:layout_below="@+id/ct_header_bar"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textColor="@color/ct_mf_black_color"
		android:textStyle="bold"
		android:gravity="left"
		android:textSize="@dimen/ct_sz_40dp"
		android:layout_marginLeft="@dimen/ct_sz_32dp"
		android:layout_marginTop="@dimen/ct_sz_28dp"
		android:layout_marginBottom="@dimen/ct_sz_28dp"
		android:layout_marginRight="@dimen/ct_sz_32dp"
		android:layout_centerHorizontal="true"
		android:text="@string/heading_cttransfer_interrupt"/>

	<TextView
		android:id="@+id/ct_error_desc_tv"
		style="@style/CTTextDescription"
		android:layout_below="@+id/ct_error_heading_tv"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"
		android:gravity="left"
		android:layout_marginLeft="@dimen/ct_sz_32dp"
		android:layout_marginRight="@dimen/ct_sz_32dp"
		android:layout_marginTop="@dimen/ct_sz_12dp"
		android:layout_marginBottom="@dimen/ct_sz_12dp"
		android:textSize="@dimen/ct_txt_sz_13sp"
		android:text="@string/text_cttransfer_interrupt"/>


	<LinearLayout android:id="@+id/ct_error_buttons_ll"
				  android:layout_width="match_parent"
				  android:layout_height="@dimen/ct_sz_45dp"
				  android:layout_alignParentBottom="true"
				  android:layout_marginBottom="@dimen/ct_sz_20dp"
				  android:orientation="horizontal"
				  android:gravity="center_horizontal"
				  android:layout_below="@+id/ct_error_desc_tv" >

		<TextView
			android:id="@+id/center_button_tv"
			android:layout_width="@dimen/ct_sz_120dp"
			android:layout_height="@dimen/ct_sz_42dp"
			style="@style/CTMFButtonTypeSolid"
			android:text="@string/center_button"
			android:layout_gravity="bottom"
			android:gravity="center|center_horizontal"
			android:layout_marginLeft="@dimen/ct_sz_20dp"/>

	</LinearLayout>


</RelativeLayout>
